<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Name"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/Accountname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="10dp"
        android:text="@string/emptyString10"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Accountname"
        android:layout_below="@+id/Accountname"
        android:layout_marginTop="15dp"
        android:text="Address"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/Accountaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView32"
        android:layout_centerVertical="true"
        android:layout_marginTop="120dp"
        android:text="@string/emptyString11"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Accountaddress"
        android:layout_below="@+id/Accountaddress"
        android:layout_marginTop="160dp"
        android:text="Mobile Number"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/Accountnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView34"
        android:layout_marginTop="14dp"
        android:text="@string/emptyString12"
        android:textSize="15sp"
        android:layout_alignStart="@+id/textView34" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Date of Birth"
        android:layout_below="@+id/Accountnumber"
        android:layout_alignStart="@+id/textView34"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/Accountdob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="10dp"
        android:text="@string/emptyString13"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Accountdob"
        android:layout_below="@+id/Accountdob"
        android:layout_marginTop="20dp"
        android:text="Email id"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/Accountemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="10dp"
        android:text="@string/emptyString14"
        android:textSize="15sp"/>
</RelativeLayout>

</ScrollView>